--- a/Lecture-1/demo/src/styles/index.css
+++ b/Lecture-1/demo/src/styles/index.css
@@ -77,6 +77,7 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 5px;
 }
 
 #startButton {
@@ -206,4 +207,32 @@ canvas {
   background: rgba(0,0,0,0.4);
   border: 2px solid rgba(0, 216, 174, 0.5);
   box-shadow: 0 0 2px 2px var(--color-primary);
+}
+
+.loader {
+  width: 30px;
+  aspect-ratio: 1;
+  background: #554236;
+  display: grid;
+  animation: l4-0 1s infinite linear;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  background:#f77825;
+  animation: inherit;
+  animation-name: l4-1;
+}
+.loader::after {
+  background: #60B99A;
+  --s: 60deg;
+}
+@keyframes l4-0 {
+  0%,20% {transform: rotate(0)}
+  100%   {transform: rotate(90deg)}
+}
+@keyframes l4-1 {
+  50% {transform: rotate(var(--s,30deg))}
+  100% {transform: rotate(0)}
 }
